# rusty_ops

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rusty_ci.yaml  versions.toml
auth/: Cargo.toml
auth/src/: lib.rs
auth/src/authenticate/: mod.rs
auth/src/authorize/: mod.rs
auth/src/token/: mod.rs
auth/tests/: auth.rs  utils.rs
auth/tests/authenticate/: mod.rs  redis.rs
auth/tests/authorize/: mod.rs
auth_macro/: Cargo.toml
auth_macro/src/: lib.rs
commons/: Cargo.toml
commons/src/: lib.rs
commons/src/env/: mod.rs
commons/src/errors/: mod.rs
commons/src/hashing/: bcrypt.rs  mod.rs  sha.rs
commons/src/logger/: mod.rs
commons/tests/: commons.rs  commons_unit.rs
commons/tests/env/: mod.rs
commons/tests/hashing/: sha.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/agents/: mod.rs
domain/src/auth/: credentials.rs  mod.rs  permissions.rs  resources.rs  roles.rs  user.rs
domain/src/commons/: mod.rs  search.rs  ws.rs
domain/src/filters/: search.rs
domain/src/jobs/: mod.rs
domain/src/pipelines/: mod.rs
domain/src/projects/: group.rs  mod.rs  project.rs
domain/src/templates/: mod.rs  pipeline.rs
domain/tests/: domain.rs
domain/tests/agents/: mod.rs
domain/tests/auth/: credentials.rs  mod.rs  user.rs
domain/tests/commons/: search.rs
domain/tests/jobs/: mod.rs
domain/tests/pipelines/: mod.rs
domain/tests/projects/: group.rs  mod.rs
domain/tests/templates/: mod.rs  pipelines.rs
messaging/: Cargo.toml
messaging/src/: lib.rs  mq_client.rs  mq_consumer.rs  mq_type.rs
messaging/src/internal/: mod.rs
messaging/src/rabbitmq/: mod.rs
persist/: Cargo.toml
persist/src/: db_client.rs  db_type.rs  lib.rs
persist/src/inmemory/: mod.rs
persist/src/messaging/: mod.rs
persist/src/mongo/: mod.rs
persist/src/postgre/: mod.rs
persist/src/redis/: mod.rs  pubsub.rs
persist/src/shared/: mod.rs
persist/tests/: db_client.rs  persist.rs
rusty_agent/: Cargo.toml  Dockerfile  log4rs.yaml
rusty_agent/src/: lib.rs  main.rs
rusty_agent/src/api/: agents.rs  auth.rs  client.rs  jobs.rs  mod.rs  pipelines.rs  projects.rs  utils.rs
rusty_agent/src/messaging/: mod.rs
rusty_agent/src/resolver/: assignment.rs  execution.rs  mod.rs  subscription.rs
rusty_agent/src/runners/: mod.rs  pipelines.rs
rusty_agent/src/runners/pipelines/: docker.rs  machine.rs  mod.rs  shared.rs
rusty_agent/src/schedulers/: healthcheck.rs  mod.rs  pipeline_created.rs  pipeline_fetch_assigned.rs  pipeline_fetch_unassigned.rs  renew_token.rs
rusty_init/: Cargo.toml  Dockerfile
rusty_init/sql/: v1.0.0.sql
rusty_init/src/: lib.rs  main.rs
rusty_init/src/ops/: mod.rs  permissions.rs  resources.rs  roles.rs  schema.rs  users.rs  versions.rs
rusty_init/src/versions/: mod.rs  v1_0_0.rs
rusty_server/: Cargo.toml  Dockerfile  log4rs.yaml
rusty_server/src/: lib.rs  main.rs  server_ext.rs
rusty_server/src/gql/: agents.rs  auth.rs  jobs.rs  mod.rs  pipelines.rs  project_groups.rs  projects.rs  shared.rs  users.rs
rusty_server/src/middleware/: cors.rs  mod.rs
rusty_server/src/schedulers/: agent_ttl.rs  mod.rs  pipeline_cleanup.rs  pipeline_logs.rs
rusty_server/src/services/: agents.rs  jobs.rs  mod.rs  pipelines.rs  project_groups.rs  projects.rs  roles.rs  shared.rs  users.rs
rusty_web/: .dockerignore  .env.example  Cargo.toml  Dockerfile  build.rs  index.html  nginx.conf  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
rusty_web/src/: app.html  env.rs  main.rs  router.rs
rusty_web/src/api/: agents.rs  client.rs  jobs.rs  mod.rs  pipelines.rs  projects.rs  utils.rs
rusty_web/src/components/: fallback.rs  footer.rs  header.rs  mod.rs
rusty_web/src/components/auth/: Card.svelte  NavLeft.svelte
rusty_web/src/components/landing/: Content.svelte  Feature.svelte  Features.svelte  Footer.svelte  Header.svelte  Nav.svelte  Welcome.svelte
rusty_web/src/components/shared/: Button.svelte  ConfirmModal.svelte  Header.svelte  (+1 more)
rusty_web/src/lib/: links.ts  mobile-check.ts  toasts.ts  token.ts  tooltip.ts
rusty_web/src/pages/: mod.rs  projects.rs
rusty_web/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
rusty_web/src/styles/: app.scss  button.scss  cookies.scss  global.scss  landing.scss  status.scss  wrapText.scss
rusty_web/src/utils/: dates.rs  icons.rs  mod.rs
rusty_web/styles/: agents.scss  errors.scss  fonts.scss  header.scss  home.scss  jobs.scss  modal.scss  page.scss  project.scss  projects.scss  scroll.scss  style.scss  variables.scss
secret/: Cargo.toml
secret/src/: lib.rs  sc_client.rs
secret/src/vault/: mod.rs
tests/: Cargo.toml  lib.rs
tests/auth/: mod.rs  utils.rs
tests/auth/authenticate/: mod.rs
tests/auth/authorize/: mod.rs
tests/auth_macro/: mod.rs
tests/commons/env/: mod.rs
tests/commons/hashing/: bcrypt.rs  mod.rs  sha.rs
tests/domain/: mod.rs
tests/domain/agents/: mod.rs
tests/domain/auth/: mod.rs  permissions.rs  resources.rs  user.rs
tests/domain/jobs/: mod.rs
tests/domain/pipelines/: mod.rs
tests/domain/projects/: group.rs  mod.rs  project.rs
tests/init/: mod.rs
tests/init/ops/: resources.rs  roles.rs  schema.rs  users.rs
tests/init/versions/: mod.rs  v1_0_0.rs
tests/messaging/: mod.rs  mq_client.rs
tests/persist/: db_client.rs  mod.rs
tests/rusty_agent/: mod.rs
tests/rusty_agent/api/: agents.rs  auth.rs  jobs.rs  mod.rs  pipelines.rs  projects.rs
tests/rusty_agent/executors/: pipelines.rs
tests/rusty_agent/resolver/: assignment.rs  execution.rs  mod.rs
tests/rusty_agent/runners/: pipelines.rs
tests/rusty_agent/schedulers/: mod.rs
tests/rusty_init/ops/: mod.rs  permissions.rs  resources.rs  roles.rs  schema.rs  users.rs
tests/rusty_init/versions/: v1_0_0.rs
tests/rusty_server/: mod.rs
tests/rusty_server/middleware/: mod.rs
tests/rusty_server/schedulers/: mod.rs
tests/rusty_server/services/: agents.rs  jobs.rs  mod.rs  pipelines.rs  project_groups.rs  projects.rs  roles.rs  shared.rs  users.rs
tests/secret/: mod.rs  sc_client.rs
tests/utils/: mod.rs
(+105 files in other folders)
