[workspace]
members = ["rusty_*", "commons", "domain", "persist"]
default-members = ["rusty_*", "commons", "domain", "persist"]
resolver = "2"

[workspace.package]
version = "0.0.1"
rust-version = "1.76"
edition = "2021"
authors = [ "Paweł Walus <pawel.walus@protonmail.com>" ]
homepage = "https://github.com/pw-order-of-devs"
repository = "https://github.com/pw-order-of-devs/rusty_ops"
keywords = ["ci", "cd", "ops"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
async-graphql = "7.0"
async-graphql-poem = "7.0"
chrono = "0.4"
futures-util = "0.3"
gloo-net = "0.5"
leptos = "0.6"
leptos_meta = "0.6"
leptos_router = "0.6"
log = "0.4"
log4rs = "1.3"
mongodb = "2.8"
poem = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
uuid = "1.7"
wasm-bindgen = "0.2"
