[workspace]
members = ["rusty_*", "commons", "domain", "persist"]
default-members = ["rusty_*", "commons", "domain", "persist"]
resolver = "2"

[workspace.package]
version = "0.0.1"
rust-version = "1.76"
edition = "2021"
authors = [ "Paweł Walus <pawel.walus@protonmail.com>" ]
homepage = "https://github.com/pw-order-of-devs"
repository = "https://github.com/pw-order-of-devs/rusty_ops"
keywords = ["ci", "cd", "ops"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
async-graphql = "7.0"
async-graphql-axum = "7.0"
async-std = "1.12"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.7", features = ["http2", "tokio"] }
base64-url = "2.0"
bb8-postgres = "0.8"
bb8-redis = "0.15"
chrono = "0.4"
clokwerk= "0.4"
dotenvy = "0.15"
futures-util = "0.3"
leptos = "0.6"
leptos_meta = "0.6"
leptos_router = "0.6"
log = "0.4"
log4rs = "1.3"
mongodb = "2.8"
reqwasm = "0.5"
reqwest = "0.12"
rstest = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_valid = "0.19"
serde_yaml = "0.9"
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.21"
tower-http = "0.5"
url = "2.2"
uuid = "1.7"
