[workspace]
members = ["rusty_*", "auth*", "commons", "domain", "persist", "auth_macro"]
default-members = ["rusty_*", "auth*", "commons", "domain", "persist"]
exclude = ["rusty_web"]
resolver = "2"

[workspace.package]
version = "0.0.1"
rust-version = "1.76"
edition = "2021"
authors = [ "Paweł Walus <pawel.walus@protonmail.com>" ]
homepage = "https://github.com/pw-order-of-devs"
repository = "https://github.com/pw-order-of-devs/rusty_ops"
keywords = ["ci", "cd", "ops"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
async-graphql = "7.0"
async-graphql-axum = "7.0"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.7", features = ["http2", "tokio"] }
base64 = "0.22.0"
base64-url = "3.0"
bb8-postgres = "0.8"
bb8-redis = "0.15"
bcrypt = "0.15"
chrono = "0.4"
futures-util = "0.3"
hmac = "0.12"
jwt = "0.16"
log = "0.4"
log4rs = "1.3"
once_cell = "1.19"
mongodb = "2.8"
rand = "0.8"
reqwest = "0.12"
rstest = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_valid = "0.19"
serde_yaml = "0.9"
sha2 = "0.10"
testcontainers = "0.16"
testcontainers-modules = "0.4"
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.21"
tower-http = "0.5"
url = "2.2"
uuid = "1.7"
