[package]
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
name = "auth_macro"
description = "rusty_ops - auth macro decoration module"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
