[package]
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
name = "commons"
description = "rusty_ops - commons module"

[lib]
name = "commons"
path = "src/lib.rs"

[dependencies]
async-graphql.workspace = true
mongodb.workspace = true
log.workspace = true
log4rs.workspace = true
