[package]
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
name = "commons"
description = "rusty_ops - commons module"

[lib]
name = "commons"
path = "src/lib.rs"

[features]
errors = []
gloo = ["gloo-net"]
logging = ["log", "log4rs"]
mongo = ["mongodb"]

[dependencies]
async-graphql.workspace = true
gloo-net = { workspace = true, optional = true }
log = { workspace = true, optional = true }
log4rs = { workspace = true, optional = true }
mongodb = { workspace = true, optional = true }
serde_json.workspace = true
