[package]
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
name = "commons"
description = "rusty_ops - commons module"

[lib]
name = "commons"
path = "src/lib.rs"

[features]
errors = []
wasm = ["reqwasm"]
logging = ["log4rs"]
persist = ["mongodb", "bb8-postgres", "bb8-redis"]
ws = ["tokio-tungstenite"]

[dependencies]
async-graphql.workspace = true
base64-url.workspace = true
bcrypt.workspace = true
hmac.workspace = true
log.workspace = true
log4rs = { workspace = true, features = ["gzip", "all_components"], optional = true }
mongodb = { workspace = true, optional = true }
bb8-postgres = { workspace = true, optional = true }
bb8-redis = { workspace = true, optional = true }
reqwasm = { workspace = true, optional = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_valid.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-tungstenite = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
