[package]
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
name = "domain"
description = "rusty_ops - domain module"

[lib]
name = "domain"
path = "src/lib.rs"

[features]
mongo = ["mongodb", "uuid"]

[dependencies]
async-graphql.workspace = true
mongodb = { workspace = true, optional = true }
serde.workspace = true
uuid = { workspace = true, optional = true }
