[package]
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
name = "domain"
description = "rusty_ops - domain module"

[lib]
name = "domain"
path = "src/lib.rs"

[dependencies]
commons = { path = "../commons", features = ["errors"] }

async-graphql.workspace = true
base64-url.workspace = true
chrono.workspace = true
log.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_valid.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
url.workspace = true
