[package]
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
name = "persist"
description = "rusty_ops - persistence module"

[lib]
name = "persist"
path = "src/lib.rs"

[dependencies]
commons = { path = "../commons" }
domain = { path = "../domain" }

mongodb.workspace = true
futures-util.workspace = true
