[package]
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
name = "persist"
description = "rusty_ops - persistence module"

[lib]
name = "persist"
path = "src/lib.rs"

[dependencies]
commons = { path = "../commons", features = ["errors", "logging", "mongo", "redis"] }
domain = { path = "../domain", features = ["uuid_v4"] }

async-stream = "0.3"
futures-util.workspace = true
log.workspace = true
deadpool-redis = { workspace = true, features = ["rt_tokio_1", "serde"] }
mongodb.workspace = true
serde_json.workspace = true
tokio.workspace = true
