[package]
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
name = "persist"
description = "rusty_ops - persistence module"

[lib]
name = "persist"
path = "src/lib.rs"

[dependencies]
commons = { path = "../commons", features = ["errors", "logging", "persist"] }
domain = { path = "../domain", features = ["uuid_v4"] }

async-stream.workspace = true
async-trait.workspace = true
bb8-postgres = { workspace = true, features = ["with-serde_json-1"] }
bb8-redis.workspace = true
futures-util.workspace = true
log.workspace = true
mongodb.workspace = true
serde_json.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio.workspace = true
