[package]
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
name = "rusty_server"
description = "rusty_ops - ci/cd system"

[[bin]]
name = "rusty_server"
path = "src/main.rs"

[dependencies]
commons = { path = "../commons", features = ["errors", "logging", "mongo"] }
domain = { path = "../domain", features = ["mongo"] }
persist = { path = "../persist" }

async-graphql.workspace = true
async-graphql-poem.workspace = true
log.workspace = true
poem.workspace = true
tokio.workspace = true
