[package]
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
name = "rusty_server"
description = "rusty_ops - ci/cd system - server"

[[bin]]
name = "rusty_server"
path = "src/main.rs"

[lib]
name = "rusty_server"
path = "src/lib.rs"

[dependencies]
auth = { path = "../auth" }
auth_macro = { path = "../auth_macro" }
commons = { path = "../commons", features = ["errors", "logging"] }
domain = { path = "../domain" }
messaging = { path = "../messaging", features = ["external", "internal"] }
persist = { path = "../persist" }
secret = { path = "../secret" }

async-graphql.workspace = true
async-graphql-axum.workspace = true
axum.workspace = true
chrono.workspace = true
log.workspace = true
once_cell.workspace = true
serde_json.workspace = true
serde_valid.workspace = true
tokio.workspace = true
tower-http = { workspace = true, features = ["cors"] }
