[package]
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
name = "rusty_web"
description = "rusty_ops - web ui"

[[bin]]
name = "rusty_web"
path = "src/main.rs"

[dependencies]
commons = { path = "../commons", features = ["errors", "wasm"] }
domain = { path = "../domain" }

async-std.workspace = true
base64-url.workspace = true
chrono.workspace = true
leptos = { workspace = true, features = ["csr"] }
leptos_meta = { workspace = true, features = ["csr"] }
leptos_router = { workspace = true, features = ["csr"] }
reqwasm.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true

[build-dependencies]
dotenv.workspace = true
