[package]
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
name = "secret"
description = "rusty_ops - secret module"

[dependencies]
commons = { path = "../commons", features = ["errors"] }

reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
tokio.workspace = true
