[package]
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
name = "tests"
description = "rusty_ops - tests module"

[lib]
name = "tests"
path = "lib.rs"

[dependencies]
auth = { path = "../auth" }
auth_macro = { path = "../auth_macro" }
commons = { path = "../commons", features = ["errors", "logging", "persist"] }
domain = { path = "../domain" }
persist = { path = "../persist" }
rusty_init = { path = "../rusty_init" }

async-graphql.workspace = true
base64-url.workspace = true
chrono.workspace = true
log.workspace = true
rstest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_valid.workspace = true
testcontainers.workspace = true
testcontainers-modules = { workspace = true, features = ["mongo", "postgres", "redis"] }
tokio.workspace = true
uuid.workspace = true

[package.metadata.cargo-machete]
ignored = ["log"]
